# SFML-Mini-Projects

./: .gitignore  LICENSE
bouncing-balls/src/: Ball.cpp  Ball.hpp  CMakeLists.txt  main.cpp
drawing-grid/src/: CMakeLists.txt  Core.hpp  Main.cpp
drawing-grid/src/Components/: Block.cpp  Block.hpp  Grid.cpp  Grid.hpp
sfml-textures/src/: CMakeLists.txt  Main.cpp
shortest-path/lib/: commands.txt
shortest-path/src/: CMakeLists.txt  Main.cpp  stdafx.hpp
shortest-path/src/Components/: App.cpp  App.hpp  Block.cpp  Block.hpp  BlockGrid.cpp  BlockGrid.hpp  Grid.cpp  Grid.hpp  Node.cpp  Node.hpp
shortest-path/src/Controllers/: App.cpp  App.hpp  GridController.cpp  GridController.hpp
shortest-path/src/Tools/: MG_Algorithm.cpp  MG_Algorithm.hpp  SP_Algorithm.cpp  SP_Algorithm.hpp
visual-sorting/src/: CMakeLists.txt  Main.cpp  stdafx.hpp
visual-sorting/src/Components/: App.cpp  App.hpp  Bar.cpp  Bar.hpp  SortController.cpp  SortController.hpp
